# project-c

./: .gitignore  CMakeLists.txt  README.md
.github/: auto_assign.yml
.github/workflows/: assing_reviewers.yml  codeql.yml
assets/: README.md  backgroundBlur.fs
docs/: README.md
include/: raygui.h
layouts/: menu.tmpl
lib/: .gitignore  README.md  install_dependencies.sh
scripts/: README.md  build.bat  clean.bat  project-c.bat  run.sh  start.bat
src/: game.cpp  game.h  main.cpp
src/core/generator/: generate-terrain.cpp  generate-terrain.h  generateFoliage.cpp  generateFoliage.h  generateTerrain.cpp  generateTerrain.h  loadImages.cpp  loadImages.h  makeTerrainImage.cpp  makeTerrainImage.h  makeTerrainImage.hpp  testPerlin.cpp  testPerlin2.cpp
src/core/generator/noiseFunctions/: perlinNoise.cpp  perlinNoise.h
src/core/generator/noiseTesting/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp
src/generator/: menu.cpp  menu.h
src/generator/core/: dom.cpp  dom.h
src/generator/ux/: button.cpp  button.h
src/gui/: gui.cpp  gui.h
src/layout/generator/core/: core.h
src/layout/menu/: menu.cpp  menu.h
